# masters-thesis

./: .gitignore  .gitmodules  README.md  README.slurm.md  pyproject.toml  pyproject_lambda.toml  srun-debug.sh  srun-setup.sh
src/: main.py
src/embedding_space_analysis/: analyze_embedding_space.py  analyze_thought_strategies.py  inference.py  latent_seismograph.py  side_by_side.py  solver.py  worst_cases.py
src/hrpo/: callbacks.py  eval_grpo_gsm8k.py  eval_gsm8k.py  eval_hrpo_gsm8k.py  eval_instruct_baseline_gsm8k.py  grpo_gsm8k.py  grpo_gsm8k2.py  hrpo_gsm8k.py  hrpo_gsm8k2.py  inspect_latent_gates.py  patch.py  sanity_guards.py  significance_test.py  train_grpo_gsm8k.py  train_hrpo_gsm8k.py  utils.py
src/hrpo/hrpo_transformers/: modeling_llama.py  modeling_qwen2.py  utils.py
src/hrpo/hrpo_trl/: grpo_trainer.py
src/hrpo/hrpo_unsloth/: llama.py  loader.py  qwen2.py  rl_replacements.py
src/latent_embedding_experiments/algorithms/: chimera.py  clean_soft_thinking.py  config.py  deterministic_token_cleaning.py  discrete_sharpened.py  dylar.py  latent_head.py  soft_thinking.py  soft_thinking_sharpened.py  solver.py  solver_hyperparam_search.py  token_sharpening.py  utils.py
src/latent_embedding_experiments/data/: gsm8k.py
src/latent_embedding_experiments/embedding_space_analysis/: embedding_space_geometry_analysis.py  embedding_space_logits_cancellation_analysis.py  embedding_space_vector_arithmetic_analysis.py
src/latent_embedding_experiments/evaluation/: eval_arc_search.py  eval_arc_search_gemma.py  eval_gsm8k.py  eval_gsm8k_search.py  significance_test.py  (+3 more)
(+38 files in other folders)
