[project]
name = "masters-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "benepar>=0.2.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "debugpy>=1.8.17",
    "matplotlib>=3.10.7",
    "nltk>=3.9.4",
    "peft>=0.18.0",
    "scipy>=1.16.3",
    "spacy>=3.8.13",
    "torch>=2.9.1",
    "wandb>=0.23.0",
]
