[project]
name = "masters-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "benepar>=0.2.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "debugpy>=1.8.20",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "peft>=0.18.1",
    "scipy>=1.17.1",
    "spacy>=3.8.14",
    "torch==2.9.1",
    "wandb>=0.25.1",
]
