[project]
name = "masters-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "benepar>=0.2.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "debugpy>=1.8.20",
    "flash-linear-attention>=0.5.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "peft>=0.19.1",
    "scipy>=1.17.1",
    "sentence-transformers>=5.4.1",
    "timm>=1.0.26",
    "torch==2.10.0",
    "transformers>=5.7.0",
    "wandb>=0.26.1",
]
